--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
         android:name="android.hardware.telephony"
         android:required="false" />
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
@@ -23,6 +25,18 @@
         android:theme="@style/Theme.SAFE"
         tools:targetApi="31">
         <activity
+            android:name=".helpcenter.ContactSupportActivity"
+            android:exported="false" />
+        <activity
+            android:name=".helpcenter.ContactSupport"
+            android:exported="false" />
+        <activity
+            android:name=".helpcenter.FAQActivity"
+            android:exported="false" />
+        <activity
+            android:name=".helpcenter.HelpCenterActivity"
+            android:exported="false" />
+        <activity
             android:name=".splashscreen.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
@@ -30,15 +44,28 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".Main2Activity"
             android:exported="false"
-            android:label="SAFE"/>
+            android:label="SAFE" />
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+        <activity
+            android:name=".loginandsignup.SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".loginandsignup.LoginActivity"
+            android:exported="false" />
+
+        <receiver android:name=".SMSReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
